Merge, PerfectCase fitting, added gitignore